--- a/Index.HTML
+++ b/Index.HTML
@@ -1,5 +1,10 @@
-<h1>My First Cloud Deployment</h1>
-<h2>Hello, my name is JOJETH BATANES</h2>
-<img src="https://all-free-download.com/free-vector/download/information_technology_professional_backdrop_template_elegant_dark_circles_6934978.html" width="200"/>
-<p>This is my first deployed website!</p>
-
+<!DOCTYPE html>
+<html>
+<
+body>
+  <h1>My First Cloud Deployment</h1>
+  <h2>Hello, my name is YOUR NAME</h2>
+  <img src="YOUR_IMAGE_URL" width="200"/>
+  <p>This is my first deployed website!</p>
+</body>
+</html>
