--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
-
 <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is JOJETH BATANES</h2>
-<img src="https://all-free-download.com/free-vector/download/information_technology_professional_backdrop_template_elegant_dark_circles_6934978.html" width="200"/>
+<img src= https://all-free-download.com/free-vector/download/information_technology_professional_backdrop_template_elegant_dark_circles_6934978.html width="200"/>
 <p>This is my first deployed website!</p>
+
 
 
